# CodeFiles

./: .gitignore
AutoHotKey/: MyMouseClick.ahk  MyScript.ahk  test.ahk
C++/: C++11.md  C++17新特性.md  EffectiveModernC++.md  littleProgram_Windows Socket.cpp  littleProgram_home.cpp
C++/CMake/: CMake Cookbook.md  CMake 入门实战.md  CMakeLearn.md
C++/CMake/projects/5-3/TestProject/: CMakeLists.txt  main.cpp
C++/CMake/projects/5-4/TestProject/: CMakeLists.txt
C++/ModernC++/: C++11.md  C++11和14新特性.md  C++11多线程.md  C++17新特性.md  CMake Cookbook.md  ModernC++.md  深入理解C++11.md
C++/conan/: conanLearn.md
C++/conan/pictures/: file.html
C++/epoll/: epollLearn.md
Docker/: Docker.md  Knative.md  Kubernetes.md
Docker/config/: hello-service.yaml
Git/: GitLearn_home.txt
Go/: GoLearn.md
Html/: htmlLearning_home.txt
Installations/Vmware/: 问题及解决.txt  问题解决.txt
Installations/Vmware/设置单板信任关系/: auto_ssh.sh  password.txt  步骤.txt
Installations/Wox/配置/: 配置.txt
Installations/Xshell/: MyGreen-New White.xcs
Installations/anaconda/: 切镜像.txt  常用操作.txt  问题解决.txt
Installations/everything/: 配置.md
Installations/git/: 问题解决.txt
Installations/npp/配置文件/: Path.txt
Installations/npp/配置文件/Notepad++/: XMLToolsExt.ini  config.xml  langs.xml  session.xml  shortcuts.xml  stylers.xml
Interview/: InterviewPreparation.md  JiuKun.txt
Java/: AlgorithmLearn.md  AlgroithmLearn.md  CleanCode.md  Java8新特性.md  JavaLearn_home.java  SrpingBoot进阶.md  环境变量配置.txt
Java/深入浅出SpringBoot2.x/: 深入浅出SpringBoot2.x.md
Java/重构改善既有代码的设计/: 重构改善既有代码的设计.md
JavaEE/: JavaEE_home.txt
LeetCode/: leetcode.md
Linux/: linuxLearn_home.sh  问题及解决.txt
MachineLearning/: MachineLearning.py
Markdown/: mdLearn.md
Maven/linux/: settings.xml  配置.txt
Maven/pom配置/: pom.xml
Maven/windows/: settings.xml
MySql/: MySql.sql
Projects/cpp_projects/backtesting_project/: CMakeLists.txt
Projects/cpp_projects/backtesting_project/csv_files/: data_30_days.pkl.csv  data_3_years.pkl.csv  data_60_days.pkl.csv
Projects/cpp_projects/backtesting_project/header/: analyzer.h  backtest.h  broker.h  commission_info.h  constant.h  data.h  indicator.h  line_base.h  observer.h  order.h  sizer.h  strategy.h  utils.h
Projects/cpp_projects/backtesting_project/src/: analyzer.cpp  backtest.cpp  broker.cpp  commission_info.cpp  data.cpp  indicator.cpp  main.cpp  observer.cpp  order.cpp  sizer.cpp  strategy.cpp  utils.cpp
Projects/cpp_projects/backtesting_project/test/: test_analyzer.cpp  test_utils.cpp
Projects/cpp_projects/coin_project/: CMakeLists.txt
Projects/cpp_projects/coin_project/header/: coin_sequence_calculator.h  thread_pool.h  timer.h
Projects/cpp_projects/coin_project/src/: coin_sequence_calculator.cpp  main.cpp
Projects/cpp_projects/coin_project/test/: test_calculator.cpp
Projects/cpp_projects/gtest_project/: CMakeLists.txt
Projects/cpp_projects/gtest_project/header/: my_add.h
Projects/cpp_projects/gtest_project/src/: my_add.cpp
Projects/cpp_projects/gtest_project/test/: CMakeLists.txt  test_solution.cpp
Projects/cpp_projects/gtest_project_downloaded_src/: CMakeLists.txt
Projects/cpp_projects/gtest_project_downloaded_src/src/: CMakeLists.txt
Projects/cpp_projects/gtest_project_downloaded_src/test/: CMakeLists.txt  test_my_add.cpp
Projects/java_projects/jdbc_project/: .gitignore  pom.xml
Projects/java_projects/jdbc_project/conf/: test.sql
Projects/python_projects/backtesting_project/src/: main.py  main_sharpe.py
Projects/python_projects/backtesting_project/unit_test/: test_backtesting.py
Projects/python_projects/doris_validation/: README.md  validate_main.py
Projects/python_projects/doris_validation/conf/: init.sql  insert.sql
Projects/python_projects/doris_validation/scripts/: deploy_doris_build_env.sh  package_doris_output.sh  validate_single_doris.sh
Projects/scripts/: StartEverythingAndWox.bat  StopEverythingAndWox.bat  cygwin.bat  python_tools.bat  start_tools.bat  stop_tools.bat
Python/: Cookbook.md  Problems Solved.txt  ScrapyLearn.md  SpiderLearn.md  pythonLearn_home.py  wxPythonLearn.py
Python/Flask/: FlaskLearn.md
Python/Jinja2/: Jinja2Learn.md
Quant/: Quant.md
React/: ReactLearn.md  node installation.txt
Redis/: Redis学习.md  redis安装与设置.txt
VBA/: vbaLearn_home.vb
(+43 files in other folders)
